# bankarr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.github/workflows/: coverage.yml  miri.yaml  miri.yml  miri_and_coverage.yml
benches/: bank.rs  bankarr.rs  bankvec.rs
results/: BENCHMARKS.md
src/: bank.rs  bankarr.rs  bankarray.rs  banklist.rs  bankvec.rs  bankvec2.rs  drain.rs  errors.rs  lib.rs
src/bank/: into_iter.rs  raw_iter.rs
src/bankarr/: drain.rs  raw_iter.rs
src/bankarray/: raw_iter.rs
src/bankvec/: allocation.rs  buffer_union.rs
src/bankvec2/: allocation.rs  buffer_union.rs
