[package]
name = "bankarr"
version = "0.2.0"
edition = "2024"
license = "MIT"

keywords = ["fixed vec", "vec", "vector"]
categories = ["data-structures"]

[dev-dependencies]
criterion = "0.6"
smallvec = { version = "1.15.1", features = ["union"] }
arrayvec = "0.7"

[[bench]]
name = "bankarr"
harness = false
