[package]
name = "bankarr"
version = "0.7.3"
edition = "2024"
description = "Array-like but growable vectors"
documentation = "https://docs.rs/bankarr"
repository = "https://github.com/stkterry/bankarr"
license = "MIT"
readme = "README.md"
keywords = ["array", "stack", "vec", "small", "bank"]
categories = ["data-structures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
criterion = "0.6"
smallvec = { version = "1.15.1", features = ["union"] }
arrayvec = "0.7"

[[bench]]
name = "bankarr"
harness = false

[lib]
bench = false